change type Role from Role to String